# bambu_timelapse_downloader

./: .gitignore  Dockerfile  README.md  Readme.md  alpine.Dockerfile  pyproject.toml
.github/workflows/: python-app.yml  python-testing.yml  release-build.yml
src/bambu_timelapse_downloader/: config.py  console.py  ffmpeg.py  ftp.py  logging.py  pyinstaller.py
tests/: test_ftp.py  test_pyinstaller.py
