[tool.poetry]
name = "bambu-timelapse-downloader"
version = "1.1.0"
description = "Small utility to download timelapse files from bambu printer"
authors = []
readme = "README.md"
packages = [{include = "bambu_timelapse_downloader", from="src"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
click = "^8.1.7"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
click-params = "^0.5.0"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "*"

[tool.poetry.scripts]
bambu-ftp-download = "bambu_timelapse_downloader.console:ftp_download"
build = "bambu_timelapse_downloader.pyinstaller:install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
