[tool.poetry]
name = "bambu-timelapse-downloader"
version = "1.1.0"
description = "Small utility to download timelapse files from bambu printer"
authors = []
readme = "README.md"
packages = [{include = "bambu_timelapse_downloader", from="src"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
click = "^8.1.7"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
click-params = "^0.5.0"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "*"

[tool.poetry.group.build-alpine]
optional = true

[tool.poetry.group.build-alpine.dependencies]
pycrypto = "*"

[tool.poetry.group.tests.dependencies]
pytest-icdiff = "^0.9"
pytest = "^8.3.4"
pytest-socket = "^0.7.0"
flakeheaven = "^3.3.0"


[tool.poetry.group.docs.dependencies]
sphinx-exec-code = "^0.15"
sphinx = "^8.1.3"

[tool.poetry.scripts]
bambu-ftp-download = "bambu_timelapse_downloader.console:ftp_download"
build = "bambu_timelapse_downloader.pyinstaller:install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
max-line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = [
    "--disable-socket",
]
